<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_positive">

    <fragment
        android:id="@+id/navigation_positive"
        android:name="com.ibracero.retrum.ui.home.PositiveFragment"
        android:label="@string/title_positive"
        tools:layout="@layout/fragment_positive" />

    <fragment
        android:id="@+id/navigation_negative"
        android:name="com.ibracero.retrum.ui.dashboard.DashboardFragment"
        android:label="@string/title_negative"
        tools:layout="@layout/fragment_negative" />

    <fragment
        android:id="@+id/navigation_actions"
        android:name="com.ibracero.retrum.ui.notifications.NotificationsFragment"
        android:label="@string/title_actions"
        tools:layout="@layout/fragment_actions" />
</navigation>