<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/reset_password_root"
	android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/reset_password_toolbar"
		android:layout_width="0dp"
		android:layout_height="?android:actionBarSize"
		android:background="@color/colorPrimaryDark"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:navigationIcon="@drawable/ic_arrow_back"
		app:title="@string/forgot_your_password_label"
		app:titleTextColor="@color/primaryTextColor" />

	<TextView
		android:id="@+id/reset_password_explanation"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/reset_password_directions"
		android:textColor="@color/primaryTextColor"
		app:layout_constraintEnd_toEndOf="@id/email_input_layout"
		app:layout_constraintStart_toStartOf="@id/email_input_layout"
		app:layout_constraintTop_toBottomOf="@id/reset_password_toolbar" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/email_input_layout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:focusedByDefault="true"
		android:hint="@string/email"
		android:textColorHint="@color/primaryTextColorTranslucent"
		app:errorEnabled="true"
		app:hintAnimationEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/reset_password_explanation"
		tools:ignore="UnusedAttribute">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email_input_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="8dp"
			android:inputType="textEmailAddress"
			android:textColor="@color/primaryTextColor" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/confirm_button"
		style="@style/DarkButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:enabled="false"
		android:text="@string/confirm"
		android:textAlignment="center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@id/email_input_layout"
		app:layout_constraintStart_toStartOf="@id/email_input_layout"
		app:layout_constraintTop_toBottomOf="@id/email_input_layout"
		app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>